--- a/twoway-binding.html
+++ b/twoway-binding.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>maruhti</title>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     </head>
     <body>
